NLP TP/texts/robotics/robotics.stackexchange_0000091337.txt
Q:

unable to build geometry package in ROS kinetic

Im trying to install geometry package but im getting this error:
[ 93%] Built target check_for_chessboard
Scanning dependencies of target marker_broadcaster
[ 93%] Building CXX object ardrone_autonomy/CMakeFiles/ardrone_driver.dir/src/video.cpp.o
[ 93%] Building CXX object external_camera_tf/CMakeFiles/calib_gui.dir/src/calib_gui.cpp.o
[ 93%] Building CXX object external_camera_tf/CMakeFiles/marker_broadcaster.dir/src/marker_broadcaster.cpp.o
In file included from /home/pramod/catkin_ws/devel/src/ardronelib/ARDroneLib/Soft/Lib/ardrone_tool/Video/video_stage_ffmpeg_decoder.h:14:0,
                 from /home/pramod/catkin_ws/devel/src/ardronelib/ARDroneLib/Soft/Lib/ardrone_tool/Video/video_stage_decoder.h:27,
                 from /home/pramod/catkin_ws/devel/src/ardronelib/ARDroneLib/Soft/Lib/ardrone_tool/Video/video_stage.h:27,
                 from /home/pramod/catkin_ws/src/ardrone_autonomy/include/ardrone_autonomy/ardrone_sdk.h:63,
                 from /home/pramod/catkin_ws/src/ardrone_autonomy/include/ardrone_autonomy/video.h:28,
                 from /home/pramod/catkin_ws/src/ardrone_autonomy/src/video.cpp:25:
/home/pramod/catkin_ws/devel/src/ardronelib/ARDroneLib/FFMPEG/Includes/libavcodec/avcodec.h:525:27: warning: attribute ignored in declaration of ‘enum AVLPCType’ [-Wattributes]
 attribute_deprecated enum AVLPCType {
                           ^
/home/pramod/catkin_ws/devel/src/ardronelib/ARDroneLib/FFMPEG/Includes/libavcodec/avcodec.h:525:27: note: attribute for ‘enum AVLPCType’ must follow the ‘enum’ keyword
[ 93%] Linking CXX executable /home/pramod/catkin_ws/devel/lib/external_camera_tf/calib_gui
In file included from /home/pramod/catkin_ws/src/geometry/tf/include/tf/transform_broadcaster.h:36:0,
                 from /home/pramod/catkin_ws/src/ardrone_autonomy/include/ardrone_autonomy/ardrone_driver.h:33,
                 from /home/pramod/catkin_ws/src/ardrone_autonomy/include/ardrone_autonomy/ardrone_sdk.h:70,
                 from /home/pramod/catkin_ws/src/ardrone_autonomy/include/ardrone_autonomy/video.h:28,
                 from /home/pramod/catkin_ws/src/ardrone_autonomy/src/video.cpp:25:
/home/pramod/catkin_ws/src/geometry/tf/include/tf/tf.h:354:8: error: ‘shared_ptr’ in namespace ‘std’ does not name a template type
   std::shared_ptr<tf2_ros::Buffer> getTF2BufferPtr() { return tf2_buffer_ptr_;};
        ^
/home/pramod/catkin_ws/src/geometry/tf/include/tf/tf.h:403:8: error: ‘shared_ptr’ in namespace ‘std’ does not name a template type
   std::shared_ptr<tf2_ros::Buffer> tf2_buffer_ptr_;
        ^
/home/pramod/catkin_ws/src/geometry/tf/include/tf/tf.h: In member function ‘ros::Duration tf::Transformer::getCacheLength()’:
/home/pramod/catkin_ws/src/geometry/tf/include/tf/tf.h:331:43: error: ‘tf2_buffer_ptr_’ was not declared in this scope
   ros::Duration getCacheLength() { return tf2_buffer_ptr_->getCacheLength();}
                                           ^
/home/pramod/catkin_ws/src/geometry/tf/include/tf/tf.h: In member function ‘void tf::Transformer::setUsingDedicatedThread(bool)’:
/home/pramod/catkin_ws/src/geometry/tf/include/tf/tf.h:349:46: error: ‘tf2_buffer_ptr_’ was not declared in this scope
   void setUsingDedicatedThread(bool value) { tf2_buffer_ptr_->setUsingDedicatedThread(value);};
                                              ^
/home/pramod/catkin_ws/src/geometry/tf/include/tf/tf.h: In member function ‘bool tf::Transformer::isUsingDedicatedThread()’:
/home/pramod/catkin_ws/src/geometry/tf/include/tf/tf.h:351:42: error: ‘tf2_buffer_ptr_’ was not declared in this scope
   bool isUsingDedicatedThread() { return tf2_buffer_ptr_->isUsingDedicatedThread();};
                                          ^
In file included from /home/pramod/catkin_ws/src/geometry/tf/include/tf/transform_broadcaster.h:36:0,
                 from /home/pramod/catkin_ws/src/ardrone_autonomy/include/ardrone_autonomy/ardrone_driver.h:33,
                 from /home/pramod/catkin_ws/src/ardrone_autonomy/src/ardrone_driver.cpp:30:
/home/pramod/catkin_ws/src/geometry/tf/include/tf/tf.h:354:8: error: ‘shared_ptr’ in namespace ‘std’ does not name a template type
   std::shared_ptr<tf2_ros::Buffer> getTF2BufferPtr() { return tf2_buffer_ptr_;};
        ^
/home/pramod/catkin_ws/src/geometry/tf/include/tf/tf.h:403:8: error: ‘shared_ptr’ in namespace ‘std’ does not name a template type
   std::shared_ptr<tf2_ros::Buffer> tf2_buffer_ptr_;
        ^
/home/pramod/catkin_ws/src/geometry/tf/include/tf/tf.h: In member function ‘ros::Duration tf::Transformer::getCacheLength()’:
/home/pramod/catkin_ws/src/geometry/tf/include/tf/tf.h:331:43: error: ‘tf2_buffer_ptr_’ was not declared in this scope
   ros::Duration getCacheLength() { return tf2_buffer_ptr_->getCacheLength();}
                                           ^
/home/pramod/catkin_ws/src/geometry/tf/include/tf/tf.h: In member function ‘void tf::Transformer::setUsingDedicatedThread(bool)’:
/home/pramod/catkin_ws/src/geometry/tf/include/tf/tf.h:349:46: error: ‘tf2_buffer_ptr_’ was not declared in this scope
   void setUsingDedicatedThread(bool value) { tf2_buffer_ptr_->setUsingDedicatedThread(value);};
                                              ^
/home/pramod/catkin_ws/src/geometry/tf/include/tf/tf.h: In member function ‘bool tf::Transformer::isUsingDedicatedThread()’:
/home/pramod/catkin_ws/src/geometry/tf/include/tf/tf.h:351:42: error: ‘tf2_buffer_ptr_’ was not declared in this scope
   bool isUsingDedicatedThread() { return tf2_buffer_ptr_->isUsingDedicatedThread();};
                                          ^
ardrone_autonomy/CMakeFiles/ardrone_driver.dir/build.make:86: recipe for target 'ardrone_autonomy/CMakeFiles/ardrone_driver.dir/src/video.cpp.o' failed
make[2]: *** [ardrone_autonomy/CMakeFiles/ardrone_driver.dir/src/video.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
In file included from /home/pramod/catkin_ws/devel/src/ardronelib/ARDroneLib/Soft/Lib/ardrone_tool/Video/video_stage_ffmpeg_decoder.h:14:0,
                 from /home/pramod/catkin_ws/devel/src/ardronelib/ARDroneLib/Soft/Lib/ardrone_tool/Video/video_stage_decoder.h:27,
                 from /home/pramod/catkin_ws/devel/src/ardronelib/ARDroneLib/Soft/Lib/ardrone_tool/Video/video_stage.h:27,
                 from /home/pramod/catkin_ws/src/ardrone_autonomy/include/ardrone_autonomy/ardrone_sdk.h:63,
                 from /home/pramod/catkin_ws/src/ardrone_autonomy/include/ardrone_autonomy/ardrone_driver.h:41,
                 from /home/pramod/catkin_ws/src/ardrone_autonomy/src/ardrone_driver.cpp:30:
/home/pramod/catkin_ws/devel/src/ardronelib/ARDroneLib/FFMPEG/Includes/libavcodec/avcodec.h: At global scope:
/home/pramod/catkin_ws/devel/src/ardronelib/ARDroneLib/FFMPEG/Includes/libavcodec/avcodec.h:525:27: warning: attribute ignored in declaration of ‘enum AVLPCType’ [-Wattributes]
 attribute_deprecated enum AVLPCType {
                           ^
/home/pramod/catkin_ws/devel/src/ardronelib/ARDroneLib/FFMPEG/Includes/libavcodec/avcodec.h:525:27: note: attribute for ‘enum AVLPCType’ must follow the ‘enum’ keyword
Scanning dependencies of target external_camera_tf_broadcaster
[ 93%] Building CXX object external_camera_tf/CMakeFiles/external_camera_tf_broadcaster.dir/src/external_camera_tf_broadcaster.cpp.o
[ 93%] Linking CXX executable /home/pramod/catkin_ws/devel/lib/external_camera_tf/marker_broadcaster
[ 93%] Built target calib_gui
Scanning dependencies of target test_trajectory
ardrone_autonomy/CMakeFiles/ardrone_driver.dir/build.make:62: recipe for target 'ardrone_autonomy/CMakeFiles/ardrone_driver.dir/src/ardrone_driver.cpp.o' failed
make[2]: *** [ardrone_autonomy/CMakeFiles/ardrone_driver.dir/src/ardrone_driver.cpp.o] Error 1
CMakeFiles/Makefile2:19256: recipe for target 'ardrone_autonomy/CMakeFiles/ardrone_driver.dir/all' failed
make[1]: *** [ardrone_autonomy/CMakeFiles/ardrone_driver.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
[ 93%] Building CXX object tum_simulator/cvg_sim_gazebo_plugins/CMakeFiles/test_trajectory.dir/src/test_trajectory.cpp.o
[ 93%] Built target marker_broadcaster
[ 93%] Linking CXX executable /home/pramod/catkin_ws/devel/lib/external_camera_tf/external_camera_tf_broadcaster
[ 93%] Built target external_camera_tf_broadcaster
[ 93%] Linking CXX executable /home/pramod/catkin_ws/devel/lib/cvg_sim_gazebo_plugins/test_trajectory
[ 93%] Built target test_trajectory
Makefile:138: recipe for target 'all' failed
make: *** [all] Error 2
Invoking "make -j4 -l4" failed

Originally posted by Pramod on ROS Answers with karma: 3 on 2019-04-12
Post score: 0

A:

It looks like  you're using a version of geometry2 from ROS2 in Kinetic. Make sure you're uisng the right branch. To that end, if you'd like more help, please update your question with informatoin about how to reproduce your environment. All the binary packages you've installed from what source, as well as all the source code checkouts that are in your workspace and what versions you have present. If we can reproduce your problem it is easier to help you. Otherwise we'll just be guessing.

Originally posted by tfoote with karma: 58457 on 2019-04-12
This answer was ACCEPTED on the original site
Post score: 1

Original comments
Comment by Pramod on 2019-04-13:
Thankyou. Iam trying to install melodic branch package in kinetic.That's why its not working.

